--- a/jenga-language.html
+++ b/jenga-language.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Jenga, a stack-oriented, concatenative programming
+    <title>Jenga: a stack-oriented, concatenative programming
 language - joydeep.dev</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +16,7 @@ language - joydeep.dev</title>
       <li><a href="./projects.html">Projects</a></li>
     </div>
         <header id="title-block-header">
-      <h1 class="title">Jenga, a stack-oriented, concatenative
+      <h1 class="title">Jenga: a stack-oriented, concatenative
 programming language</h1>
                   <p class="author">Joydeep Mukherjee</p>
                   <p class="date">May 26, 2023</p>
@@ -461,7 +461,7 @@ during type-checking</code></pre>
         awesome to reimplement common utilities like <code>cat</code> or
         <code>ls</code>, or even write a simple TCP server in Jenga.</p>
         <footer class="footer">
-      <p>© 2021-2022. Joydeep Mukherjee</p>
+      <p>© 2021-2023. Joydeep Mukherjee</p>
     </footer>
   </body>
 </html>
