--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
                             </header>
         <p>Here are some projects that I have worked on:</p>
         <ul>
-        <li><a href="./jenga-language.html">Jenga, a stack-oriented,
+        <li><a href="./jenga-language.html">Jenga: a stack-oriented,
         concatenative programming language</a></li>
         <li><a href="./parallelizing-convolution.html">A Parallelized,
         CUDA-Accelerated, LeNet Convolution Layer</a></li>
@@ -27,7 +27,7 @@
         Pandoc, Markdown, and Make</a></li>
         </ul>
         <footer class="footer">
-      <p>© 2021-2022. Joydeep Mukherjee</p>
+      <p>© 2021-2023. Joydeep Mukherjee</p>
     </footer>
   </body>
 </html>
