Update Jenga article, URL

--- a/projects.html
+++ b/projects.html
@@ -19,8 +19,8 @@
                             </header>
         <p>Here are some projects that I have worked on:</p>
         <ul>
-        <li><a href="./jenga-language.html">Jenga: a stack-oriented,
-        concatenative programming language</a></li>
+        <li><a href="./jenga-programming-language.html">Jenga: a
+        stack-oriented, concatenative programming language</a></li>
         <li><a href="./parallelizing-convolution.html">A Parallelized,
         CUDA-Accelerated, LeNet Convolution Layer</a></li>
         <li><a href="./building-a-website.html">Building a Website with
