--- a/cs416su23/narrative-visualization.html
+++ b/cs416su23/narrative-visualization.html
@@ -5,6 +5,8 @@
   <!-- Load d3-annotation -->
   <script src="https://rawgit.com/susielu/d3-annotation/master/d3-annotation.min.js"></script>
 
+  <title>Narrative Visualization - S&P 500: 1990 to 2023</title>
+
   <!-- CSS -->
   <style>
     body {
