Add writing page, template refresh

--- a/category-theory-for-programmers.html
+++ b/category-theory-for-programmers.html
@@ -17,6 +17,7 @@ Programmers” - joydeep.dev</title>
       <li class="name"><a href="./index.html">Joydeep Mukherjee</a></li>
       <li><a href="./index.html">Home</a></li>
       <li><a href="./projects.html">Projects</a></li>
+      <li><a href="./writing.html">Writing</a></li>
     </div>
         <header id="title-block-header">
       <h1 class="title">Notes on “Category Theory for Programmers”</h1>
