--- a/jenga-programming-language.html
+++ b/jenga-programming-language.html
@@ -14,6 +14,7 @@ language - joydeep.dev</title>
       <li class="name"><a href="./index.html">Joydeep Mukherjee</a></li>
       <li><a href="./index.html">Home</a></li>
       <li><a href="./projects.html">Projects</a></li>
+      <li><a href="./writing.html">Writing</a></li>
     </div>
         <header id="title-block-header">
       <h1 class="title">Jenga: a stack-oriented, concatenative
