--- a/template.html
+++ b/template.html
@@ -22,6 +22,7 @@
       <li class="name"><a href="./index.html">Joydeep Mukherjee</a></li>
       <li><a href="./index.html">Home</a></li>
       <li><a href="./projects.html">Projects</a></li>
+      <li><a href="./writing.html">Writing</a></li>
     </div>
     $if(hide-preamble)$
     <!-- hack to retain same top margin with and without title -->
