--- a/writing.html
+++ b/writing.html
@@ -13,16 +13,16 @@
       <li class="name"><a href="./index.html">Joydeep Mukherjee</a></li>
       <li><a href="./index.html">Home</a></li>
       <li><a href="./projects.html">Projects</a></li>
+      <li><a href="./writing.html">Writing</a></li>
     </div>
-        <!-- hack to retain same top margin with and without title -->
-    <header id="title-block-header">
-      <h1 class="title"></h1>
-    </header>
-        <p>These are articles I have written about programming, computer
-        science, mathematics, and more.</p>
+        <header id="title-block-header">
+      <h1 class="title">Writing</h1>
+                            </header>
+        <p>These are notes or articles I have written about programming,
+        computer science, and more.</p>
         <ul>
-        <li><a href="./building-a-website.html">Building a Website with
-        Pandoc, Markdown, and Make</a></li>
+        <li><a href="./category-theory-for-programmers.html">Notes on
+        “Category Theory for Programmers”</a></li>
         </ul>
         <footer class="footer">
       <p>© 2021-2023. Joydeep Mukherjee</p>
