--- a/building-a-website.html
+++ b/building-a-website.html
@@ -17,6 +17,7 @@ Make - joydeep.dev</title>
       <li class="name"><a href="./index.html">Joydeep Mukherjee</a></li>
       <li><a href="./index.html">Home</a></li>
       <li><a href="./projects.html">Projects</a></li>
+      <li><a href="./writing.html">Writing</a></li>
     </div>
         <header id="title-block-header">
       <h1 class="title">Building a Website with Pandoc, Markdown, and
