--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <li class="name"><a href="./index.html">Joydeep Mukherjee</a></li>
       <li><a href="./index.html">Home</a></li>
       <li><a href="./projects.html">Projects</a></li>
+      <li><a href="./writing.html">Writing</a></li>
     </div>
         <!-- hack to retain same top margin with and without title -->
     <header id="title-block-header">
