--- a/projects.html
+++ b/projects.html
@@ -13,6 +13,7 @@
       <li class="name"><a href="./index.html">Joydeep Mukherjee</a></li>
       <li><a href="./index.html">Home</a></li>
       <li><a href="./projects.html">Projects</a></li>
+      <li><a href="./writing.html">Writing</a></li>
     </div>
         <header id="title-block-header">
       <h1 class="title">Projects</h1>
